fixed canvas stretching, added text render function

--- a/css/main.css
+++ b/css/main.css
@@ -131,11 +131,11 @@ img.portrait{
 .canvas-container {
     border: 1px black solid;
     width: 100%;
-    height:300px;
+    /* height:300px; */
     background-color: #555;
     margin-bottom: 20px;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 
